--- a/estilo.css
+++ b/estilo.css
@@ -42,10 +42,97 @@ background-color: rgba(0,128,255,0.3);
     margin-top: 30px;
 }
 .caja_trasera div h3{
-font-weight: 400;
+font-weight:400;
 font-size: 26px;
 }
 .caja_trasera button{
     padding:10px 40px;
-    border:2px solid #fff}
+    border:2px solid #fff;
+    background: transparent;
+    font-size: 30px;
+    font-weight: 500;
+    cursor: pointer;
+    color: white;
+    outline: none;
+    transform:  all 300ms;
+}
+.caja_trasera button:hover{
+    background:#fff;
+    color:rgba(0,128,255,1);
+}
+/*formulario*/
+.contenedor_login{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 380px;
+    position: relative;
+    top: -200px;
+    left: 10px;
+
+    transition:left 500ms cubic-bezier(0.175,0.885,0.320,1.275);
+}
+.contenedor_login form{
+width:100%;
+padding: 80px 20px;
+background:#fff;
+position:absolute;
+border-radius: 20px;
+}
+.contenedor_login form h2{
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+    color:black;
+}
+.contenedor_login form input{
+    width: 300px;
+    margin-top: 20px;
+    padding: 15px;
+    border:none;
+    background:#f2f2f2;
+    font-size: 20px;
+    outline: none;
+}
+.contenedor_login button{
+    padding:10px 40px;
+    margin-top: 40px;
+    border: none;
+    font-size: 14px;
+    background:rgba(0,128,255,0.3);
+    color: white;
+    cursor:pointer;
+    outline:none;
+}
+.formulario_login{
+    opacity: 1;
+    display:block;
+}
+.formulario_registro{
+    display:none;
+}
+/*responcibe*/
+@media screen and (max-width: 850px) {
+    main{
+        margin-top: 50px;
+    }  
+    .caja_trasera{
+        max-width: 350px;
+        height: 300px;
+        flex-direction: column;
+        margin: auto;
+    }
+    .caja_trasera div{
+        margin: 0;
+        position: absolute;
+    }
+    /*formulario*/
+    .contenedor_login{
+        top: -10px;
+        left:-5px;
+        margin:auto;
+        }
+    .contenedor_login form{
+        position: relative;
+    }
 }
